RESOLVED FIXED103433
[WK2] WebPageProxy::relatedPages() cannot assume that this page is known to process
https://bugs.webkit.org/show_bug.cgi?id=103433
Summary [WK2] WebPageProxy::relatedPages() cannot assume that this page is known to p...
Alexey Proskuryakov
Reported 2012-11-27 09:58:51 PST
pages() returns a list of pages in WebProcess, so this page may or may not be among them - a client can use a reference to WebPageProxy after the page has closed. <rdar://problem/12619000>
Attachments
proposed fix (1.61 KB, patch)
2012-11-27 10:04 PST, Alexey Proskuryakov
jberlin: review+
Alexey Proskuryakov
Comment 1 2012-11-27 10:04:02 PST
Created attachment 176291 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-11-27 10:37:19 PST
Sam Weinig
Comment 3 2012-11-27 10:53:09 PST
Why not add an isClosed() check, and return null here?
Alexey Proskuryakov
Comment 4 2012-11-27 11:05:20 PST
That doesn't seem to a be a direct enough check - isClosed() may or may not return true if WebProcess has crashed.
Note You need to log in before you can comment on or make changes to this bug.