        [WK2] WebPageProxy::relatedPages() cannot assume that this page is known to process         https://bugs.webkit.org/show_bug.cgi?id=103433         <rdar://problem/12543513>

Reviewed by Jessie Berlin.

        * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::relatedPages): Removed an incorrect
        assertion, and modified code to not rely on its condition being true.



Canonical link: https://commits.webkit.org/121525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135879 268f45cc-cd09-0410-ab3c-d52691b4dbfc